--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>My Weird 90s Art Gallery</title>
+      <title>O.P.I.U.M</title>
       <style>
          .wrapper {
          display: flex;
