--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       <body>
          <div class="wrapper">
             <div class="menu">
-               <a href="https://inscribenow.io/collections/8148f7418334e0b1">MINT</a>
-               <a href="https://twitter.com/lepuppeteerfou">TWITTER</a>
+               <a href="https://inscribenow.io/collections/8148f7418334e0b1" target="_blank">MINT</a>
+               <a href="https://twitter.com/lepuppeteerfou" target="_blank">TWITTER</a>
             </div>
             <div class="container">
                <div class="text">
@@ -83,6 +83,7 @@
                      <a href="https://ordinals.com/inscription/d0edfaf314652d9641903179cf9751a85682dd2aad3e4a221721dcc417bcd859i0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/d0edfaf314652d9641903179cf9751a85682dd2aad3e4a221721dcc417bcd859i0" alt="" />
                      <a href="https://ordinals.com/inscription/411dfc231c5ed633a782fb14bce1901b42bab55a3919e94df6306c41f731a049i0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/411dfc231c5ed633a782fb14bce1901b42bab55a3919e94df6306c41f731a049i0" alt="" />
                   </div>
+                  <p></p>
                </div>
             </div>
          </div>
