add discord link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          font-size: 20px;
          font-weight: bold;
          text-transform: uppercase;
-         letter-spacing: 2px
+         letter-spacing: 2px;
          transition: all 0.3s ease;
          }
          .menu a:hover {
@@ -71,6 +71,7 @@
             <div class="menu">
                <a href="https://inscribenow.io/collections/8148f7418334e0b1" target="_blank">MINT</a>
                <a href="https://twitter.com/lepuppeteerfou" target="_blank">TWITTER</a>
+               <a href="https://discord.gg/ngTs6pA6tb" target="_blank">OPIUM SHED (DISCORD)</a>
             </div>
             <div class="container">
                <div class="text">
