--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
          line-height: 1.5;
          text-align: justify;
          text-shadow: 
+         }
+         .footer {
+  color: #fff;
+  text-align: left;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  font-size: 24px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 2px 2px #ff0000, -2px -2px #00ff00, 2px -2px #0000ff, -2px 2px #ffff00;
+}
+
       </style>
    </head>
    <body>
@@ -84,8 +97,15 @@
                      <a href="https://ordinals.com/inscription/d0edfaf314652d9641903179cf9751a85682dd2aad3e4a221721dcc417bcd859i0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/d0edfaf314652d9641903179cf9751a85682dd2aad3e4a221721dcc417bcd859i0" alt="" />
                      <a href="https://ordinals.com/inscription/411dfc231c5ed633a782fb14bce1901b42bab55a3919e94df6306c41f731a049i0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/411dfc231c5ed633a782fb14bce1901b42bab55a3919e94df6306c41f731a049i0" alt="" />
                   </div>
-                  <p></p>
-               </div>
+
+              </div>
+
             </div>
          </div>
+         <footer class="footer">
+            PUPPETIZE YOUR LIFE TODAY!!!!! <br>
+            PUPPETIZE YOUR LIFE TODAY!!!!! <br>
+            PUPPETIZE YOUR LIFE TODAY!!!!! <br>
+            PUPPETIZE YOUR LIFE TODAY!!!!!
+          </footer>
    </body>
