--- a/index.html
+++ b/index.html
@@ -65,24 +65,23 @@
          text-shadow: 
          }
          .footer {
-  color: #fff;
-  text-align: left;
-  padding: 20px;
-  font-family: Arial, sans-serif;
-  font-size: 24px;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-shadow: 2px 2px #ff0000, -2px -2px #00ff00, 2px -2px #0000ff, -2px 2px #ffff00;
-}
-
+         color: #fff;
+         text-align: left;
+         padding: 20px;
+         font-family: Arial, sans-serif;
+         font-size: 24px;
+         letter-spacing: 5px;
+         text-transform: uppercase;
+         font-weight: bold;
+         text-shadow: 2px 2px #ff0000, -2px -2px #00ff00, 2px -2px #0000ff, -2px 2px #ffff00;
+         }
       </style>
    </head>
    <body>
       <body>
          <div class="wrapper">
             <div class="menu">
-               <a href="https://inscribenow.io/collections/8148f7418334e0b1" target="_blank">MINT</a>
+               <a href="https://inscribenow.io/collections/8148f7418334e0b1" target="_blank">FREE MINT HYPE</a>
                <a href="https://twitter.com/lepuppeteerfou" target="_blank">TWITTER</a>
                <a href="https://discord.gg/ngTs6pA6tb" target="_blank">OPIUM SHED (DISCORD)</a>
             </div>
@@ -92,14 +91,12 @@
                   <p>Ord Puppet Inu Undoxxed Millionaire is an esoteric and absurd collection of 777 hand puppets, created with basic tools, lots of effort and passion. These puppets are a product of the fringes of the karmic grid, where the most unconventional and offbeat ideas are born.</p>
                   <p>The Ordinal Puppets are inscribed on Bitcoin and embedded on the chain for eternity. Below some of the beautifully crafted puppets that are already inscribed at this moment. 
                   <div class="art-grid">
-                     <a href="https://ordinals.com/inscription/2e899672fc1dc2cf7f57de4b234597eec200e0f1c338eda939ae2f7f4a67790ci0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/2e899672fc1dc2cf7f57de4b234597eec200e0f1c338eda939ae2f7f4a67790ci0" alt="" />
-                     <a href="https://ordinals.com/inscription/5e519ee0b190e31816dcca5cd86a81b8e5dfdc536b14886d1111e400dbccbc64i0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/5e519ee0b190e31816dcca5cd86a81b8e5dfdc536b14886d1111e400dbccbc64i0" alt="" />
-                     <a href="https://ordinals.com/inscription/d0edfaf314652d9641903179cf9751a85682dd2aad3e4a221721dcc417bcd859i0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/d0edfaf314652d9641903179cf9751a85682dd2aad3e4a221721dcc417bcd859i0" alt="" />
-                     <a href="https://ordinals.com/inscription/411dfc231c5ed633a782fb14bce1901b42bab55a3919e94df6306c41f731a049i0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/411dfc231c5ed633a782fb14bce1901b42bab55a3919e94df6306c41f731a049i0" alt="" />
+                     <a href="https://ordinals.com/inscription/2e899672fc1dc2cf7f57de4b234597eec200e0f1c338eda939ae2f7f4a67790ci0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/2e899672fc1dc2cf7f57de4b234597eec200e0f1c338eda939ae2f7f4a67790ci0" alt="" /></a>
+                     <a href="https://ordinals.com/inscription/5e519ee0b190e31816dcca5cd86a81b8e5dfdc536b14886d1111e400dbccbc64i0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/5e519ee0b190e31816dcca5cd86a81b8e5dfdc536b14886d1111e400dbccbc64i0" alt="" /></a>
+                     <a href="https://ordinals.com/inscription/d0edfaf314652d9641903179cf9751a85682dd2aad3e4a221721dcc417bcd859i0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/d0edfaf314652d9641903179cf9751a85682dd2aad3e4a221721dcc417bcd859i0" alt="" /></a>
+                     <a href="https://ordinals.com/inscription/411dfc231c5ed633a782fb14bce1901b42bab55a3919e94df6306c41f731a049i0" target="_blank"><img class="art-thumbnail" src="https://ordinals.com/content/411dfc231c5ed633a782fb14bce1901b42bab55a3919e94df6306c41f731a049i0" alt="" /></a>
                   </div>
-
-              </div>
-
+               </div>
             </div>
          </div>
          <footer class="footer">
@@ -107,5 +104,5 @@
             PUPPETIZE YOUR LIFE TODAY!!!!! <br>
             PUPPETIZE YOUR LIFE TODAY!!!!! <br>
             PUPPETIZE YOUR LIFE TODAY!!!!!
-          </footer>
+         </footer>
    </body>
