--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <body>
          <div class="wrapper">
             <div class="menu">
-               <a href="https://inscribenow.io/collections/8148f7418334e0b1" target="_blank">FREE MINT HYPE</a>
+               <a href="https://inscribenow.io/collections/8148f7418334e0b1" target="_blank">FREE MINT</a>
                <a href="https://twitter.com/lepuppeteerfou" target="_blank">TWITTER</a>
                <a href="https://discord.gg/ngTs6pA6tb" target="_blank">OPIUM SHED (DISCORD)</a>
             </div>
